--- a/benchmark/config.json.sample
+++ b/benchmark/config.json.sample
@@ -1,49 +1,50 @@
 {
     "output_dir": "simresults",
-    "data_dir": "data",
+    "plotting": {
+        "algorithms": [
+          "itsearch_map", "itsearch_sample", "blip","gobnilp", "pcalg", "mmhc", "tabu","order_mcmc_itsample", "order_mcmc_itmap"
+        ],
+        "models":[ {"graph":"generateDAGMaxParents",
+                    "parameters":"generateBinaryBN"}
+        ],
+        "measures": [
+            {
+            "ROC": ["blip", "gobnilp", "fges",  "pcalg"],
+            "curve_varaible": ["alpha"],
+            "SHD": ["blip", "gobnilp"],
+            "bde_score": []
+            }
+        ],
+        "fixed_data":[]
+    },
     "data": {
         "replicates": {
             "start": 1,
-            "end": 1
+            "end": 10
         },
         "sample_sizes": [
             [
-                1000
+            80
             ]
         ]
     },
-    "fixed_data":["mynicedata.csv"],
-    "graphs": {
-        "sampled": {
-            "algorithms": {
-                "generateDAGMaxParents": {
-                    "av_parents": [
-                        [2, 3]
-                    ],
-                    "dims": [
-                        [
-                            15
-                        ]
-                    ]
-                }
-            }
-        },
-        "fixed": [
-            "asia", "alarm", "hepar2", "cancer"
-        ] 
+    "graph_sampling_algorithms": {
+        "generateDAGMaxParents": {
+            "av_parents": [
+                [2]
+            ],
+            "dims": [
+                [
+                    80
+                ]
+            ]
+        }
     },
-    "model_parameters": {
-        "sampled":{
-            "algorithms":{
-                "generateBinaryBN":{
-                    "min":0.1,
-                    "max":0.9
-                }
-            }
-        },
-        "fixed":[
-            "asia", "alarm"
-        ]
+    "parameters_sampling_algorithms": {
+        "generateBinaryBN":{
+            "min":0.1,
+            "max":0.9
+        }
     },
     "evaluation": {
         "score": {
@@ -53,25 +54,42 @@
             }
         }
     },
-    "plotting": {
-        "algorithms": [
-           "ordermcmc_itmap"
-
-        ],
-        "models":[ {"graph":"hepar2",
-                        "parameters":"generateBinaryBN"}
-        ],
-        "measures": [
-            {
-            "ROC": ["blip", "gobnilp", "fges",  "pcalg"],
-            "curve_varaible": ["alpha"],
-            "SHD": ["blip", "gobnilp"]
+    "structure_learning_algorithms": {
+        "trilearn_loglin": {
+            "trilearn_loglin":{
+                "plot_legend": "trilearn_loglin",
+                "alpha": 0.5,
+                "beta": 0.5,
+                "radii": 80,
+                "N": 50,
+                "M": 300,
+                "pseudo_obs": 1.0,
+                "threshold": [
+                    0.99,
+                    0.95,
+                    0.9,
+                    0.8,
+                    0.7,
+                    0.6,
+                    0.5,
+                    0.4,
+                    0.3,
+                    0.2
+                ],
+                "burnin": 0
+            },
+             "trilearn_loglin05":{
+                "plot_legend": "trilearn_loglin05",
+                "alpha": 0.5,
+                "beta": 0.5,
+                "radii": 80,
+                "N": 50,
+                "M": 300,
+                "pseudo_obs": 1.0,
+                "threshold": 0.5,
+                "burnin": 0
             }
-        ],
-        "fixed_data":[]
-    }
-    ,
-    "algorithms": {
+        },
         "blip": {
             "blip": {
             "string": "/blip/scorer.method=is/...",
@@ -93,14 +111,17 @@
             {"gobnilp": {
                 "plot_legend": "gobnilp",
                 "plot": false,
-                "palim": 
-                    2                
+                "palim": 2,
+                "alpha": 1,
+                "prune": true            
             }
         },
         "fges": {
             "fges":{
                     "plot_legend": "fges",
-                    "faithfulnessAssumed": 1
+                    "faithfulnessAssumed": 1,
+                    "score":"bdeu-score",
+                    "data-type": "discrete"
             }
         },
         "pcalg": {
@@ -139,7 +160,13 @@
         "tabu": {
             "tabu":{
                 "plot_legend": "tabu",
-                "score":"bde"
+                "score":"bde",
+                "iss": 1,
+                "iss.mu": 1,                
+                "l": 5,
+                "k": 1,
+                "prior": "uniform",
+                "beta": 1
             }
         },
         "itsearch": {
@@ -148,13 +175,12 @@
                 "optional": {
                     "MAP": 1,
                     "plus1it": null,
-                    "posterior": null
-                },
-                "score_params": {
-                    "bdecatpar": {
-                        "chi": 1,
-                        "edgepf": 1
-                    }
+                    "posterior": null,
+                    "scoretype": "bdecat",
+                    "chi": 0.5,
+                    "edgepf": 2,
+                    "am":null,
+                    "aw":null
                 }
             }
             ,
@@ -163,30 +189,28 @@
                 "optional": {
                     "MAP": 0,
                     "plus1it": 6,
-                    "posterior": 0.5
-                },
-                "score_params": {
-                    "bdecatpar": {
-                        "chi": 1,
-                        "edgepf": 1
-                        }
-                    }
+                    "posterior": 0.5,
+                    "scoretype": "bdecat",
+                    "chi": 1,
+                    "edgepf": 1,
+                    "am":null,
+                    "aw":null
                 }
+            }
         },
 
-        "ordermcmc": {
-            "ordermcmc_itmap": {
-                "plot_legend": "omcmc_itmap",
+        "order_mcmc": {
+            "order_mcmc_itmap": {
+                "plot_legend": "order_mcmc_itmap",
                 "startspace": "itsearch_map",
                 "optional": {
                     "plus1": true
                 },
-                "score_params": {
-                    "bdepar": {
-                        "chi": 1,
-                        "edgepf": 1
-                    }
-                },
+                "scoretype": "bdecat",
+                "chi": 1,
+                "edgepf": 1,
+                "aw":null,
+                "am":null,
                 "threshold": [
                     0.99,
                     0.95,
@@ -201,6 +225,32 @@
                 ],
                 "burnin": 0
             },
+            "order_mcmc_itsample": {
+                "plot_legend": "order_mcmc_itsample",
+                "startspace": "itsearch_sample",
+                "optional": {
+                    "plus1": true
+                },
+                "scoretype": "bdecat",
+                "chi": 1,
+                "edgepf": 1,
+                "aw":null,
+                "am":null,
+                "threshold": [
+                    0.99,
+                    0.95,
+                    0.9,
+                    0.8,
+                    0.7,
+                    0.6,
+                    0.5,
+                    0.4,
+                    0.3,
+                    0.2
+                ],
+                "burnin": 0
+            },
+
             "ordermcmc_fges": {
                 "plot_legend": "omcmc_fges", 
                 "startspace": "fges",
@@ -219,12 +269,12 @@
                     0.3,
                     0.2
                 ],
-                "score_params": {
-                    "bdepar": {
-                        "chi": 1,
-                        "edgepf": 1
-                    }
-                }
+                "burnin": 0,
+                "scoretype":"bdecat",
+                "chi": 1,
+                "edgepf": 1,
+                "aw":null,
+                "am":null                                
             },
             "ordermcmc_pcalg005": {
                 "plot_legend": "omcmc_pcalg005", 
@@ -244,12 +294,12 @@
                     0.3,
                     0.2
                 ],
-                "score_params": {
-                    "bdepar": {
-                        "chi": 1,
-                        "edgepf": 1
-                    }
-                }
+                "burnin": 0,
+                "scoretype": "bdecat", 
+                "chi": 1,
+                "edgepf": 1,
+                "aw":null,
+                "am":null                
             },
             "ordermcmc_gobnilp": {
                 "plot_legend": "omcmc_gobnilp", 
@@ -269,12 +319,37 @@
                     0.3,
                     0.2
                 ],
-                "score_params": {
-                    "bdepar": {
-                        "chi": 1,
-                        "edgepf": 1
-                    }
-                }
+                "burnin": 0,
+                "scoretype": "bdecat", 
+                "chi": 1,
+                "edgepf": 1,
+                "aw":null,
+                "am":null
+            },
+            "order_mcmc_trilearn": {
+                "plot_legend": "omcmc_trilearn", 
+                "startspace": "trilearn_loglin05",
+                "optional": {
+                    "plus1": true
+                },
+                "threshold": [
+                    0.99,
+                    0.95,
+                    0.9,
+                    0.8,
+                    0.7,
+                    0.6,
+                    0.5,
+                    0.4,
+                    0.3,
+                    0.2
+                ],
+                "burnin": 0,
+                "scoretype": "bdecat", 
+                "chi": 1,
+                "edgepf": 1,
+                "aw":null,
+                "am":null
             }
         }
     }
