--- a/benchmark/Snakefile
+++ b/benchmark/Snakefile
@@ -66,14 +66,6 @@ pattern_strings["gobnilp"] = "gobnilp/alg_params=/"\
                  "alpha={alpha}"\
                  "prune={prune}"
 
-pattern_strings["fges"] = "fges/alg_params=/"\
-               "score_type={score_type}/" \
-               "bdecatpar_chi={bdecatpar_chi}/" \
-               "bdecatpar_edgepf={bdecatpar_edgepf}/" \
-               "score={score}/" \
-               "data-type={datatype}/"\
-               "faithfulnessAssumed={faithfulnessAssumed}"
-
 pattern_strings["itsearch"] = "itsearch/alg_params=/"\
                     "scoretype={scoretype}/"\
                     "chi={chi}/" \
@@ -107,6 +99,39 @@ pattern_strings["trilearn_loglin"] = "trilearn_loglin/alg_params=/"\
                   "M={M}/"\
                   "N={N}" 
 
+pattern_strings["fges"] = "fges/alg_params=/"\
+               "score_type={score_type}/" \
+               "bdecatpar_chi={bdecatpar_chi}/" \
+               "bdecatpar_edgepf={bdecatpar_edgepf}/" \
+               "score={score}/" \
+               "data-type={datatype}/"\
+               "faithfulnessAssumed={faithfulnessAssumed}"
+
+pattern_strings["fci"] = "fci/alg_params=/"\
+               "score_type={score_type}/" \
+               "bdecatpar_chi={bdecatpar_chi}/" \
+               "bdecatpar_edgepf={bdecatpar_edgepf}/" \
+               "test={test}/" \
+               "alpha={alpha}/" \
+               "data-type={datatype}"
+
+pattern_strings["gfci"] = "gfci/alg_params=/"\
+               "score_type={score_type}/" \
+               "bdecatpar_chi={bdecatpar_chi}/" \
+               "bdecatpar_edgepf={bdecatpar_edgepf}/" \
+               "test={test}/" \
+               "alpha={alpha}/" \
+               "score={score}/" \
+               "data-type={datatype}"
+
+pattern_strings["rfci"] = "rfci/alg_params=/"\
+               "score_type={score_type}/" \
+               "bdecatpar_chi={bdecatpar_chi}/" \
+               "bdecatpar_edgepf={bdecatpar_edgepf}/" \
+               "test={test}/" \
+               "alpha={alpha}/" \
+               "data-type={datatype}"
+
 pattern_strings["evaluation"] = "evaluation/" \
                    "score_type={score_type}/" \
                    "bdecatpar_chi={bdecatpar_chi}/" \
@@ -131,6 +156,29 @@ json_string.update({val["id"]: expand(pattern_strings["fges"], score_type="bdeca
                                            datatype=val["data-type"],
                                            score=val["score"]) 
                     for val in conf["structure_learning_algorithms"]["fges"]})
+
+json_string.update({val["id"]: expand(pattern_strings["fci"], score_type="bdecat",
+                                           bdecatpar_chi=conf["evaluation"]["score"]["bdecatpar"]["chi"],
+                                           bdecatpar_edgepf=conf["evaluation"]["score"]["bdecatpar"]["edgepf"],
+                                           alpha=val["alpha"],
+                                           datatype=val["data-type"],
+                                           test=val["test"]) 
+                    for val in conf["structure_learning_algorithms"]["fci"]})
+json_string.update({val["id"]: expand(pattern_strings["gfci"], score_type="bdecat",
+                                           bdecatpar_chi=conf["evaluation"]["score"]["bdecatpar"]["chi"],
+                                           bdecatpar_edgepf=conf["evaluation"]["score"]["bdecatpar"]["edgepf"],
+                                           alpha=val["alpha"],
+                                           score=val["score"],
+                                           datatype=val["data-type"],
+                                           test=val["test"]) 
+                    for val in conf["structure_learning_algorithms"]["gfci"]})
+json_string.update({val["id"]: expand(pattern_strings["rfci"], score_type="bdecat",
+                                           bdecatpar_chi=conf["evaluation"]["score"]["bdecatpar"]["chi"],
+                                           bdecatpar_edgepf=conf["evaluation"]["score"]["bdecatpar"]["edgepf"],
+                                           alpha=val["alpha"],
+                                           datatype=val["data-type"],
+                                           test=val["test"]) 
+                    for val in conf["structure_learning_algorithms"]["rfci"]})
 
 json_string.update({val["id"]: expand(pattern_strings["pcalg"], score_type="bdecat",
                                            bdecatpar_chi=conf["evaluation"]["score"]["bdecatpar"]["chi"],
@@ -534,6 +582,63 @@ def alg_shell(algorithm):
                 'rm {output.adjmat}_graph.json ' \
                 '&& ' \
                 'rm {output.adjmat}.txt'
+    elif algorithm ==  "fci":
+        return "/usr/bin/time -f \"%e\" -o {output.time} " \  
+                "java -jar causal-cmd-1.1.3-jar-with-dependencies.jar " \
+                "--algorithm fci "\
+                "--data-type {wildcards.datatype} "\
+                "--dataset {input.data} "\
+                "--delimiter space " \
+                "--test {wildcards.test} "\
+                "--alpha {wildcards.alpha} "\
+                "--json-graph "\                
+                "--prefix {output.adjmat} " \
+                '&& Rscript scripts/tetrad_graph_to_adjmat.R ' \
+                '--jsongraph {output.adjmat}_graph.json ' \
+                '--filename {output.adjmat} ' \
+                '&& ' \
+                'rm {output.adjmat}_graph.json ' \
+                '&& ' \
+                'rm {output.adjmat}.txt'
+    elif algorithm ==  "gfci":
+        return "/usr/bin/time -f \"%e\" -o {output.time} " \  
+                "java -jar causal-cmd-1.1.3-jar-with-dependencies.jar " \
+                "--algorithm gfci "\
+                "--data-type {wildcards.datatype} "\
+                "--dataset {input.data} "\
+                "--delimiter space " \
+                "--test {wildcards.test} "\
+                "--alpha {wildcards.alpha} "\
+                "--score {wildcards.score} "\
+                "--structurePrior 1 "\
+                "--json-graph "\                
+                "--prefix {output.adjmat} " \
+                '&& Rscript scripts/tetrad_graph_to_adjmat.R ' \
+                '--jsongraph {output.adjmat}_graph.json ' \
+                '--filename {output.adjmat} ' \
+                '&& ' \
+                'rm {output.adjmat}_graph.json ' \
+                '&& ' \
+                'rm {output.adjmat}.txt'
+    elif algorithm ==  "rfci":
+        return "/usr/bin/time -f \"%e\" -o {output.time} " \  
+                "java -jar causal-cmd-1.1.3-jar-with-dependencies.jar " \
+                "--algorithm rfci "\
+                "--data-type {wildcards.datatype} "\
+                "--dataset {input.data} "\
+                "--delimiter space " \
+                "--test {wildcards.test} "\
+                "--alpha {wildcards.alpha} "\
+                "--json-graph "\                
+                "--prefix {output.adjmat} " \
+                '&& Rscript scripts/tetrad_graph_to_adjmat.R ' \
+                '--jsongraph {output.adjmat}_graph.json ' \
+                '--filename {output.adjmat} ' \
+                '&& ' \
+                'rm {output.adjmat}_graph.json ' \
+                '&& ' \
+                'rm {output.adjmat}.txt'
+
     elif algorithm == "order_mcmc":
         return "/usr/bin/time -f \"%e\" -o {output.time} " \  
                 "Rscript scripts/run_order_mcmc.R " \
@@ -772,6 +877,72 @@ def summarise_alg_shell(algorithm):
                 " && python scripts/add_column.py --filename {output} --colname faithfulnessAssumed       --colval {wildcards.faithfulnessAssumed} "\
                 " && python scripts/add_column.py --filename {output} --colname time        --colval `cat {input.time}` " \
                 " && python scripts/add_column.py --filename {output} --colname legend      --colval {wildcards.plot_legend} "  
+    elif algorithm == "fci":
+        return  "Rscript scripts/run_summarise.R " \
+                "--adjmat_true {input.adjmat_true} " \
+                "--adjmat_est {input.adjmat_est} " \
+                "--filename_data {input.data} " \
+                "--filename {output.res} " \ 
+                "--range_header_data 1 " \ 
+                "--bdecatpar_chi {wildcards.bdecatpar_chi} " \
+                "--bdecatpar_edgepf {wildcards.bdecatpar_edgepf} " \        
+                " && python scripts/add_column.py --filename {output} --colname replicate   --colval {wildcards.replicate} "\
+                " && python scripts/add_column.py --filename {output} --colname algorithm   --colval fci "\
+                " && python scripts/add_column.py --filename {output} --colname score           --colval bde " \
+                " && python scripts/add_column.py --filename {output} --colname adjmat           --colval {wildcards.adjmat} " \
+                " && python scripts/add_column.py --filename {output} --colname bn              --colval {wildcards.bn} " \
+                " && python scripts/add_column.py --filename {output} --colname data           --colval {wildcards.data} " \
+                " && python scripts/add_column.py --filename {output} --colname score           --colval bde " \
+                " && python scripts/add_column.py --filename {output} --colname bdecatpar_chi   --colval {wildcards.bdecatpar_chi} " \
+                " && python scripts/add_column.py --filename {output} --colname bdecatpar_edgepf --colval {wildcards.bdecatpar_edgepf} " \
+                " && python scripts/add_column.py --filename {output} --colname alpha       --colval {wildcards.alpha} "\
+                " && python scripts/add_column.py --filename {output} --colname test       --colval {wildcards.test} "\
+                " && python scripts/add_column.py --filename {output} --colname time        --colval `cat {input.time}` " \
+                " && python scripts/add_column.py --filename {output} --colname legend      --colval {wildcards.plot_legend} "  
+    elif algorithm == "gfci":
+        return  "Rscript scripts/run_summarise.R " \
+                "--adjmat_true {input.adjmat_true} " \
+                "--adjmat_est {input.adjmat_est} " \
+                "--filename_data {input.data} " \
+                "--filename {output.res} " \ 
+                "--range_header_data 1 " \ 
+                "--bdecatpar_chi {wildcards.bdecatpar_chi} " \
+                "--bdecatpar_edgepf {wildcards.bdecatpar_edgepf} " \        
+                " && python scripts/add_column.py --filename {output} --colname replicate   --colval {wildcards.replicate} "\
+                " && python scripts/add_column.py --filename {output} --colname algorithm   --colval gfci "\
+                " && python scripts/add_column.py --filename {output} --colname eval_score       --colval bde " \
+                " && python scripts/add_column.py --filename {output} --colname adjmat           --colval {wildcards.adjmat} " \
+                " && python scripts/add_column.py --filename {output} --colname bn              --colval {wildcards.bn} " \
+                " && python scripts/add_column.py --filename {output} --colname data           --colval {wildcards.data} " \
+                " && python scripts/add_column.py --filename {output} --colname bdecatpar_chi   --colval {wildcards.bdecatpar_chi} " \
+                " && python scripts/add_column.py --filename {output} --colname bdecatpar_edgepf --colval {wildcards.bdecatpar_edgepf} " \
+                " && python scripts/add_column.py --filename {output} --colname alpha       --colval {wildcards.alpha} "\
+                " && python scripts/add_column.py --filename {output} --colname score       --colval {wildcards.score} "\
+                " && python scripts/add_column.py --filename {output} --colname test       --colval {wildcards.test} "\
+                " && python scripts/add_column.py --filename {output} --colname time        --colval `cat {input.time}` " \
+                " && python scripts/add_column.py --filename {output} --colname legend      --colval {wildcards.plot_legend} "  
+    elif algorithm == "rfci":
+        return  "Rscript scripts/run_summarise.R " \
+                "--adjmat_true {input.adjmat_true} " \
+                "--adjmat_est {input.adjmat_est} " \
+                "--filename_data {input.data} " \
+                "--filename {output.res} " \ 
+                "--range_header_data 1 " \ 
+                "--bdecatpar_chi {wildcards.bdecatpar_chi} " \
+                "--bdecatpar_edgepf {wildcards.bdecatpar_edgepf} " \        
+                " && python scripts/add_column.py --filename {output} --colname replicate   --colval {wildcards.replicate} "\
+                " && python scripts/add_column.py --filename {output} --colname algorithm   --colval rfci "\
+                " && python scripts/add_column.py --filename {output} --colname eval_score       --colval bde " \
+                " && python scripts/add_column.py --filename {output} --colname adjmat           --colval {wildcards.adjmat} " \
+                " && python scripts/add_column.py --filename {output} --colname bn              --colval {wildcards.bn} " \
+                " && python scripts/add_column.py --filename {output} --colname data           --colval {wildcards.data} " \
+                " && python scripts/add_column.py --filename {output} --colname bdecatpar_chi   --colval {wildcards.bdecatpar_chi} " \
+                " && python scripts/add_column.py --filename {output} --colname bdecatpar_edgepf --colval {wildcards.bdecatpar_edgepf} " \
+                " && python scripts/add_column.py --filename {output} --colname alpha       --colval {wildcards.alpha} "\
+                " && python scripts/add_column.py --filename {output} --colname test       --colval {wildcards.test} "\
+                " && python scripts/add_column.py --filename {output} --colname time        --colval `cat {input.time}` " \
+                " && python scripts/add_column.py --filename {output} --colname legend      --colval {wildcards.plot_legend} "  
+    
     elif algorithm=="gobnilp":
         return  "Rscript scripts/run_summarise.R " \
                 "--adjmat_true {input.adjmat_true} " \
@@ -1223,6 +1394,107 @@ rule join_summaries_fges:
         join_summaries_output("fges")
     shell:
         join_summaries_shell("fges")
+
+rule fci:
+    input:
+        data = alg_input_data()
+    output:
+        adjmat = alg_output_adjmat_path("fci"),
+        time = alg_output_time_path("fci")
+    message:
+        "Executing fci algorithm on the following files: {input}."
+    shell:
+        alg_shell("fci")
+
+rule summarise_fci:
+    input:
+        data = summarise_alg_input_data_path(),
+        adjmat_true = summarise_alg_input_adjmat_true_path(),
+        adjmat_est = summarise_alg_input_adjmat_est_path("fci"),
+        time = summarise_alg_input_time_path("fci")
+    output:
+        res = summarise_alg_output_res_path("fci")
+    message:
+        "Summarising fci results based on the files: {input}."
+    shell:
+        summarise_alg_shell("fci")
+
+rule join_summaries_fci:
+    input: # This could be a funciton since no pattern mathing is going on here
+        conf="config.json",
+        res=join_string_sampled_model("fci"),
+        fixed_res = join_string_fixed_data("fci") 
+    output:
+        join_summaries_output("fci")
+    shell:
+        join_summaries_shell("fci")
+rule gfci:
+    input:
+        data = alg_input_data()
+    output:
+        adjmat = alg_output_adjmat_path("gfci"),
+        time = alg_output_time_path("gfci")
+    message:
+        "Executing gfci algorithm on the following files: {input}."
+    shell:
+        alg_shell("gfci")
+
+rule summarise_gfci:
+    input:
+        data = summarise_alg_input_data_path(),
+        adjmat_true = summarise_alg_input_adjmat_true_path(),
+        adjmat_est = summarise_alg_input_adjmat_est_path("gfci"),
+        time = summarise_alg_input_time_path("gfci")
+    output:
+        res = summarise_alg_output_res_path("gfci")
+    message:
+        "Summarising gfci results based on the files: {input}."
+    shell:
+        summarise_alg_shell("gfci")
+
+rule join_summaries_gfci:
+    input: # This could be a funciton since no pattern mathing is going on here
+        conf="config.json",
+        res=join_string_sampled_model("gfci"),
+        fixed_res = join_string_fixed_data("gfci") 
+    output:
+        join_summaries_output("gfci")
+    shell:
+        join_summaries_shell("gfci")
+rule rfci:
+    input:
+        data = alg_input_data()
+    output:
+        adjmat = alg_output_adjmat_path("rfci"),
+        time = alg_output_time_path("rfci")
+    message:
+        "Executing rfci algorithm on the following files: {input}."
+    shell:
+        alg_shell("rfci")
+
+rule summarise_rfci:
+    input:
+        data = summarise_alg_input_data_path(),
+        adjmat_true = summarise_alg_input_adjmat_true_path(),
+        adjmat_est = summarise_alg_input_adjmat_est_path("rfci"),
+        time = summarise_alg_input_time_path("rfci")
+    output:
+        res = summarise_alg_output_res_path("rfci")
+    message:
+        "Summarising rfci results based on the files: {input}."
+    shell:
+        summarise_alg_shell("rfci")
+
+rule join_summaries_rfci:
+    input: # This could be a funciton since no pattern mathing is going on here
+        conf="config.json",
+        res=join_string_sampled_model("rfci"),
+        fixed_res = join_string_fixed_data("rfci") 
+    output:
+        join_summaries_output("rfci")
+    shell:
+        join_summaries_shell("rfci")
+
 
 rule order_mcmc:
     input:
