--- a/benchmark/Snakefile
+++ b/benchmark/Snakefile
@@ -20,6 +20,14 @@ for alg_conf_id in conf["plotting"]["algorithms"]:
         raise Exception(alg_conf_id + " not available")
 
 pattern_strings = {}
+pattern_strings["greenthomas"] = "greenthomas/alg_params=/" \
+                "score_type={score_type}/" \
+                "bdecatpar_chi={bdecatpar_chi}/" \
+                "bdecatpar_edgepf={bdecatpar_edgepf}/" \
+                "n_samples={n_samples}/" \
+                "randomits={randomits}/" \
+                "penalty={penalty}"
+
 pattern_strings["blip"] = "blip/alg_params=/" \
                 "score_type={score_type}/" \
                 "bdecatpar_chi={bdecatpar_chi}/" \
@@ -170,7 +178,17 @@ pattern_strings["evaluation"] = "evaluation/" \
                    "bdecatpar_edgepf={bdecatpar_edgepf}" 
 
 json_string = {}
-json_string = {val["id"]: expand(pattern_strings["itsearch"], 
+
+json_string = {val["id"]: expand(pattern_strings["greenthomas"], 
+                                        score_type="bdecat",
+                                           bdecatpar_chi=conf["evaluation"]["score"]["bdecatpar"]["chi"],
+                                           bdecatpar_edgepf=conf["evaluation"]["score"]["bdecatpar"]["edgepf"],
+                                           n_samples=val["n_samples"],
+                                           randomits=val["randomits"],
+                                           penalty=val["penalty"])
+                    for val in conf["structure_learning_algorithms"]["greenthomas"]}
+
+json_string.update({val["id"]: expand(pattern_strings["itsearch"], 
                                             scoretype=val["optional"]["scoretype"],
                                             chi=val["optional"]["chi"],
                                            edgepf=val["optional"]["edgepf"],
@@ -179,9 +197,10 @@ json_string = {val["id"]: expand(pattern_strings["itsearch"],
                                            MAP=val["optional"]["MAP"],
                                            plus1it=val["optional"]["plus1it"],
                                            posterior=val["optional"]["posterior"]) 
-                    for val in conf["structure_learning_algorithms"]["itsearch"]}
+                    for val in conf["structure_learning_algorithms"]["itsearch"]})
 
-json_string.update({val["id"]: expand(pattern_strings["fges"], score_type="bdecat",
+json_string.update({val["id"]: expand(pattern_strings["fges"], 
+                                        score_type="bdecat",
                                            bdecatpar_chi=conf["evaluation"]["score"]["bdecatpar"]["chi"],
                                            bdecatpar_edgepf=conf["evaluation"]["score"]["bdecatpar"]["edgepf"],
                                            faithfulnessAssumed=val["faithfulnessAssumed"],
@@ -558,7 +577,19 @@ def alg_input_data():
     return config["output_dir"]+"/data/{data}/seed={replicate}.csv"
 
 def alg_shell(algorithm):
-    if algorithm == "tabu":
+    if algorithm == "greenthomas":
+        #"&& /usr/bin/time -f \"%e\" -o {output.time} " \  
+        return "tail -n +3 {input.data} > {input.data}.noheader " \    
+            "&& cd thomasgreen && java EstimateMultinomialGM -v 0 " \
+            "-s 0 "\
+            "-n {wildcards.n_samples} "\
+            "-r {wildcards.randomits} "\
+            "-p {wildcards.penalty} < ../{input.data}.noheader > ../{output.adjmat}.adjlist " \
+            "&& python adjlist_to_adjmat.py ../{output.adjmat}.adjlist ../{output.adjmat} " \
+            "&& rm ../{output.adjmat}.adjlist ../{input.data}.noheader "\
+            "&& echo 1 > ../{output.time}"
+
+    elif algorithm == "tabu":
         return "/usr/bin/time -f \"%e\" -o {output.time} " \  
             "Rscript scripts/run_tabu.R " \
             "--filename_data {input.data} " \
@@ -784,6 +815,8 @@ def docker_image(algorithm):
         return "docker://onceltuca/trilearn:1.1"
     elif algorithm == "gobnilp":
         return "docker://onceltuca/gobnilp:1.6.3"
+    elif algorithm == "greenthomas":
+        return "docker://onceltuca/thomasgreen:1.0"
 
 def summarise_alg_input_data_path():
     return config["output_dir"]+"/data/adjmat=/{adjmat}/bn=/{bn}/data=/{data}/seed={replicate}.csv"
@@ -820,7 +853,29 @@ def summarise_alg_output_res_path(algorithm):
             "result.csv"
 
 def summarise_alg_shell(algorithm):
-    if algorithm == "tabu":
+    if algorithm == "greenthomas":
+        return  "Rscript scripts/run_summarise.R " \
+                "--adjmat_true {input.adjmat_true} " \
+                "--adjmat_est {input.adjmat_est} " \
+                "--filename_data {input.data} " \
+                "--range_header_data 1 " \ 
+                "--filename {output.res} " \ 
+                "--bdecatpar_chi {wildcards.bdecatpar_chi} " \
+                "--bdecatpar_edgepf {wildcards.bdecatpar_edgepf} " \
+                " && python scripts/add_column.py --filename {output} --colname replicate       --colval {wildcards.replicate} " \
+                " && python scripts/add_column.py --filename {output} --colname algorithm       --colval greenthomas " \
+                " && python scripts/add_column.py --filename {output} --colname adjmat          --colval {wildcards.adjmat} "  \       
+                " && python scripts/add_column.py --filename {output} --colname bn              --colval {wildcards.bn} "  \       
+                " && python scripts/add_column.py --filename {output} --colname data            --colval {wildcards.data} "  \       
+                " && python scripts/add_column.py --filename {output} --colname n_samples       --colval {wildcards.n_samples} " \
+                " && python scripts/add_column.py --filename {output} --colname randomits       --colval {wildcards.randomits} " \
+                " && python scripts/add_column.py --filename {output} --colname penalty         --colval {wildcards.penalty} " \                
+                " && python scripts/add_column.py --filename {output} --colname bdecatpar_chi   --colval {wildcards.bdecatpar_chi} " \
+                " && python scripts/add_column.py --filename {output} --colname bdecatpar_edgepf --colval {wildcards.bdecatpar_edgepf} " \
+                " && python scripts/add_column.py --filename {output} --colname time            --colval `cat {input.time}` " \
+                " && python scripts/add_column.py --filename {output} --colname legend          --colval {wildcards.plot_legend} " 
+
+    elif algorithm == "tabu":
         return  "Rscript scripts/run_summarise.R " \
                 "--adjmat_true {input.adjmat_true} " \
                 "--adjmat_est {input.adjmat_est} " \
@@ -1408,6 +1463,43 @@ rule sample_data_range_header:
         "--filename_bn {input.bn} " \
         "--samples {wildcards.n} " \
         "--seed {wildcards.replicate}"
+
+rule greenthomas:
+    input:
+        data = alg_input_data()
+    output:
+        adjmat = alg_output_adjmat_path("greenthomas"),
+        time = alg_output_time_path("greenthomas")
+    singularity:
+        docker_image("greenthomas")
+    message:
+        "Executing greenthomas algorithm on the following files: {input}."
+    shell:
+        alg_shell("greenthomas")
+
+rule summarise_greenthomas:
+    input:
+        data = summarise_alg_input_data_path(),
+        adjmat_true = summarise_alg_input_adjmat_true_path(),
+        adjmat_est = summarise_alg_input_adjmat_est_path("greenthomas"),
+        time = summarise_alg_input_time_path("greenthomas")
+    output:
+        res = summarise_alg_output_res_path("greenthomas")
+    message:
+        "Summarising greenthomas results based on the files: {input}."
+    shell:
+        summarise_alg_shell("greenthomas")
+       
+rule join_summaries_greenthomas:
+    input:
+        conf="config.json",
+        res=join_string_sampled_model("greenthomas"),
+        fixed_res = join_string_fixed_data("greenthomas")
+    output:
+        join_summaries_output("greenthomas")
+    shell:
+        join_summaries_shell("greenthomas")
+
 
 rule tabu:
     input:
