--- a/benchmark/docker-compose.yml
+++ b/benchmark/docker-compose.yml
@@ -9,6 +9,9 @@ services:
         - ./simresults:/myappdir/simresults
   trilearn:
     image: onceltuca/trilearn
+  notears:
+    image: onceltuca/jmoss20notears:1.2
+    command: tail -f /dev/null
   benchmark:
     image: onceltuca/benchmark:1.0.7
     #build: . /Dockerfile
