--- a/benchmark/Dockerfile.notears
+++ b/benchmark/Dockerfile.notears
@@ -6,6 +6,6 @@ RUN git clone https://github.com/jmoss20/notears.git
 WORKDIR /git/notears
 
 RUN pip install -r requirements.txt
-RUN pip install matplotlib
+RUN pip install matplotlib pandas
 ENV PYTHONPATH /git:/git/notears
 CMD bash
