--- a/benchmark/Snakefile
+++ b/benchmark/Snakefile
@@ -4,11 +4,13 @@ from jsonschema import validate
 with open('config.json') as json_file:
     conf = json.load(json_file)
 
-# Validade cofnig.json file
+# Validate config.json file against the schema
 with open('config.schema.json') as json_file:
     schema = json.load(json_file)
 
 validate(instance=conf, schema=schema)
+
+# Check that algorithm exists
 
 available_conf_ids = []
 for alg, alg_conf_avail in conf["structure_learning_algorithms"].items():
@@ -18,6 +20,49 @@ for alg, alg_conf_avail in conf["structure_learning_algorithms"].items():
 for alg_conf_id in conf["benchmark_setup"]["structure_learning_algorithms"]:
     if alg_conf_id not in available_conf_ids:
         raise Exception(alg_conf_id + " not available")
+
+for alg_conf in conf["structure_learning_algorithms"]["order_mcmc"]:
+    if alg_conf["startspace"] not in set(available_conf_ids) - {c["id"] for c in conf["structure_learning_algorithms"]["order_mcmc"]}:
+        raise Exception(alg_conf["startspace"] + " not available startspace for order_mcmc."\
+                        "The available are: "+str(list(set(available_conf_ids) - {c["id"] for c in conf["structure_learning_algorithms"]["order_mcmc"]})))
+
+def validate_data_setup(conf, dict):
+    # Check that adjmat exists
+    available_conf_ids = []
+    for alg, alg_conf_avail in conf["graph_sampling_algorithms"].items():
+        for alg_conf in alg_conf_avail:
+            available_conf_ids.append(alg_conf["id"])   
+
+    if dict["graph"] not in available_conf_ids:
+        raise Exception(dict["graph"] + 
+                        " is not an available graph id. "
+                        "The available graph id´s are: " + str(available_conf_ids))
+    
+    # Check that parameters exists
+    available_conf_ids = []
+    for alg, alg_conf_avail in conf["parameters_sampling_algorithms"].items():
+        for alg_conf in alg_conf_avail:
+            available_conf_ids.append(alg_conf["id"])   
+
+    if dict["parameters"] not in available_conf_ids:
+        raise Exception(dict["parameters"] + 
+                        " is not an available parameter id. "
+                        "The available paremeter id´s are: " + str(available_conf_ids))
+
+    # Check that data exists
+    available_conf_ids = []
+    for alg, alg_conf_avail in conf["data_sampling_algorithms"].items():
+        for alg_conf in alg_conf_avail:
+            available_conf_ids.append(alg_conf["id"])   
+
+    if dict["data"] not in available_conf_ids:
+        raise Exception(dict["data"] + 
+                        " is not an available data id. "
+                        "The available data id´s are: " + str(available_conf_ids))
+    # Check that graph, parameters, and data are properly combined.
+
+for data_setup in conf["benchmark_setup"]["data"]:
+    validate_data_setup(conf, data_setup)
 
 pattern_strings = {}
 pattern_strings["greenthomas"] = "greenthomas/alg_params=/" \
@@ -409,14 +454,32 @@ def get_seed_range(seed_range):
     else:
         return range(seed_range[0], seed_range[1]+1)
 
-def join_string_sampled_model(algorithm):
-    ret = [[[expand(config["output_dir"] + "/result/"\        
+# def adjmat_plots(algorithm, mode="result"):
+#     ret = [[[expand(config["output_dir"] + "/adjmat_plots/"\
+#             "adjmat=/{adjmat_string}/"
+#             "bn=/{param_string}/"
+#             "data=/{data_string}/"
+#             "algorithm=/{alg_string}/"
+#             "adjmat.eps",
+#             alg_string=json_string[alg_conf["id"]],
+#             #plot_legend=alg_conf["plot_legend"],
+#             #seed=seed,
+#             adjmat_string=gen_adjmat_string_from_conf(sim_setup["graph"], seed), 
+#             param_string=gen_parameter_string_from_conf(sim_setup["parameters"], seed),
+#             data_string=gen_data_string_from_conf(sim_setup["data"], seed))
+#             for seed in get_seed_range(sim_setup["seed_range"])]
+#             for sim_setup in config["benchmark_setup"]["data"]]
+#             for alg_conf in config["structure_learning_algorithms"][algorithm] if alg_conf["id"] in config["benchmark_setup"]["structure_learning_algorithms"]],
+#     return ret
+
+def join_string_sampled_model(algorithm, mode="result"):
+    ret = [[[expand(config["output_dir"] + "/"+mode+"/"\        
             "algorithm=/{alg_string}/"
             "adjmat=/{adjmat_string}/"
             "bn=/{param_string}/"
             "data=/{data_string}/"
             "legend={plot_legend}/" 
-            "result.csv",
+            + mode + ".csv",
             alg_string=json_string[alg_conf["id"]],
             plot_legend=alg_conf["plot_legend"],
             adjmat_string=gen_adjmat_string_from_conf(sim_setup["graph"], seed), 
@@ -427,14 +490,14 @@ def join_string_sampled_model(algorithm):
             for alg_conf in config["structure_learning_algorithms"][algorithm] if alg_conf["id"] in config["benchmark_setup"]["structure_learning_algorithms"]],
     return ret
 
-def join_string_sampled_model_mcmc(algorithm):
-    ret = [[[expand(config["output_dir"] + "/result/"\        
+def join_string_sampled_model_mcmc(algorithm, mode="result"):
+    ret = [[[expand(config["output_dir"] + "/"+mode+"/"\        
                         "algorithm=/{algorithm_string}/" 
                         "adjmat=/{adjmat_string}/"
                         "bn=/{param_string}/"
                         "data=/{data_string}/"                       
-                        "legend={plot_legend}/" 
-                        "result.csv",
+                        "legend={plot_legend}/" # /output_parameters=/legend={plot_legend}/
+                        +mode+".csv",
             threshold=alg_conf["threshold"], # only for mcmc
             burnin=alg_conf["burnin"], # only for mcmc
             plot_legend=alg_conf["plot_legend"], 
@@ -514,7 +577,7 @@ def gen_adjmat_string_from_conf(adjmat_id, seed):
 def gen_parameter_string_from_conf(gen_method_id, seed):
     with open('config.json') as json_file:
         conf = json.load(json_file)
-    #print(gen_method_id)
+    print(gen_method_id)
     if gen_method_id in [c["id"] for c in conf["parameters_sampling_algorithms"]["generateBinaryBN"]]:        
         curconf = next(item for item in conf["parameters_sampling_algorithms"]["generateBinaryBN"] if item["id"] == gen_method_id)
         return expand("generateBinaryBN" + \
@@ -541,6 +604,7 @@ def gen_parameter_string_from_conf(gen_method_id, seed):
         return None
 
 def gen_data_string_from_conf(data_id, seed):
+    print(data_id)
     if data_id in [c["id"] for c in conf["data_sampling_algorithms"]["fixed_data"]]:
         data = next(item for item in conf["data_sampling_algorithms"]["fixed_data"] if item["id"] == data_id)        
         return "fixed" + \
@@ -1438,6 +1502,16 @@ rule adjmat_from_heatmap:
         "--filename {output.adjmat_est} " \
         "--threshold {wildcards.threshold}"
 
+rule plot_matrix:
+    input:
+        adjmat = "{output_dir}/adjmat_estimate/{something}/adjmat.csv"
+    output:
+        plot = "{output_dir}/adjmat_plots/{something}/adjmat.eps"
+    singularity:
+        docker_image("trilearn")
+    shell:
+        "python scripts/plot_heatmap.py -o {output.plot} -f {input.adjmat}"
+
 rule bnlearn_adjmat:
     input:
         config["output_dir"] + "/bn/bn.fit_networks/{name}"
@@ -2181,13 +2255,21 @@ rule roc:
         config["output_dir"] + "/ROC.eps", \
         config["output_dir"] + "/ROC_data.csv" 
     shell:
-        "Rscript scripts/combine_ROC_data.R "\
+        "Rscript scripts/combine_ROC_data.R " \
         "&& Rscript scripts/plot_ROC.R"
 
-rule adjmat_plot:
-    input:
-        "config.json"
-    output:
-        config["output_dir"] + "/plots/a lot of plots"
+# rule adjmat_plot:
+#     input:
+#         "config.json",
+#         itsearch=adjmat_plots("itsearch"),
+        #gobnilp=adjmat_plots("gobnilp", seed)
+#    output:
+#        config["output_dir"] + "/adjmat_plots",
+#        plots=config["output_dir"]+"/adjmat_plots/itsearch_map.eps", #"adjmat_plots/gobnilp_seed={seed}/gobnilp.eps", "fges_seed.eps"
+        # For the output, all the parameters are not that important
+        # If there is a true graph, plot it
+#    shell:
+#        "cp {input.gobnilp} adjmat_plots/gobnilp_seed={seed}/gobnilp.eps"\
+#        " && cp {input.itsearch} adjmat_plots/itsearch_seed={seed}/itsearch.eps"\
 
     
