--- a/config.json.sample
+++ b/config.json.sample
@@ -1,116 +1,59 @@
-<snippet>
-  <content><![CDATA[
-# ${1:Systematic benchmarks of structure learning algorithms for graphical models}
-
-# BenchPress
-
-Systematic benchmarks of structure learning algorithms for graphical models.
-
-## Reqirements
-- Snakemake (required) https://snakemake.readthedocs.io/en/stable/
-- Docker (strongly recommended) https://www.docker.com/
-- Singularity (strongly recommended) https://sylabs.io/docs/
-
-## Installation
-
-### Steps to install and activate Snakemake using conda (from Snakemakes webpage)
-
-`$ conda install -c conda-forge mamba`
-
-`$ mamba create -c conda-forge -c bioconda -n snakemake snakemake`
-
-`$ conda activate snakemake`
-
-If you are using Docker and Singularity (which is strongly recommended) you might also have to install squash-tools
-
-`$ conda install -c conda-forge squash-tools`
-
-### Cloning the BenchPress repository
-
-`git clone git@github.com:felixleopoldo/benchpress.git`
-
-`cd benchpress`
-
-Copy the simulation setup in config.json.sample to config.json 
-
-`$ cp config.sample.json config.json`
-## Usage
-
-To run the simulation setup in config.json type
-
-`$ snakemake roc --cores 20 --use-singularity`
-
-Open the file `simresults/ROC.eps`.
-
-![ROC curve](simresults/ROC.eps)
-
-## Example JSON file
-
-```javascript
 {
     "output_dir": "simresults",
     "benchmark_setup": {
         "structure_learning_algorithms": [
             "itsearch_map", "order_mcmc_itmap", "blip"
         ],
-        "data":[{
-                    "graph": "hepar2.csv",
-                    "parameters": "generateBinaryBN" ,
-                    "data": "standard_sampling",
-                    "seed_range": [1, 1]
-                }],
+        "data":[               {
+            "graph": "generateDAGMaxParents",
+            "parameters": "generateBinaryBN" ,
+            "data": "standard_sampling",
+            "seed_range": [1, 1]
+        },
+        {
+            "graph": "asia.csv",
+            "parameters": "generateBinaryBN" ,
+            "data": "standard_sampling",
+            "seed_range": [1, 1]
+        },
+        {
+            "graph": "hepar2.csv",
+            "parameters": "hepar2.rds",
+            "data": "standard_sampling2000",
+            "seed_range": [1, 1]
+        },
+        {
+            "graph":"myasia.csv",
+            "parameters": null,
+            "data": "myasiandata.csv",
+            "seed_range": null
+        }],
         "evaluation": {
             "ROC": [{
-                        "structure_learning_algorithm":"blip", 
+                        "structure_learning_algorithsm":"blip", 
                         "curve_variable":"time"
                     },
                     {
                         "structure_learning_algorithm":"order_mcmc", 
                         "curve_variable":"threshold"
                     },
-                    {
-                        "structure_learning_algorithm":"itsearch", 
-                        "curve_variable":"plus1it"},
-                    {
-                        "structure_learning_algorithm":"notears",  
-                        "curve_variable":"min_rate_of_progress"}
-                    ],                    
-            "SHD": ["blip", "gobnilp"],
-            "bdecat_score": {
-                "chi": 1.0,
-                "edgepf": 0.5,
-                "algorithms": ["blip"]},
-            "bge_score": {},
-            "bic":[],
-            "bic*":[],
-            "correct_markov_blankets":[],
-            "correct_neighbors":[],
-            "auto_correlation_plot":[],
-            "adjmat_plot":[],
-            "adjmat_csv":[],
-            "heatmap_plot":{"seed":1,
-                            "algorithms":["itsearch_map"]}
+                    {"structure_learning_algorithm":"itsearch", "curve_variable":"plus1it"},
+                    {"structure_learning_algorithm":"notears", "curve_variable":"min_rate_of_progress"}
+                    ]
         }
     },
     "data_sampling_algorithms": {
         "standard_sampling":[
             {"id":"standard_sampling",
-             "sample_sizes": [100],
-             "replicates": {
-                "start": 1,
-                "end": 1
-             }},
+             "sample_sizes": [100]
+             },
              {"id":"standard_sampling2000",
-                "sample_sizes": [2000],
-                "replicates": {
-                   "start": 1,
-                   "end": 1
-                }}
+                "sample_sizes": [2000]
+                }
         ],
         "notears_linear_gaussian_sampling":[
             {
                 "id":"standard_linear_gaussian",
-                "type":"continuous",
                 "sample_sizes":[100],
                 "mean":0,
                 "variance":1
@@ -118,23 +61,20 @@ Open the file `simresults/ROC.eps`.
         ],
         "fixed_data":[
            {"id":"myasiandata.csv",
-            "type":"binary",
+            "datatype":"binary",
             "samples":100,
             "filename":"myasiandata.csv",
-            "graph":"asia.csv"}
+            "graph":"asia.csv",
+            "source":"scutari"
+            }
             ,
            {"id":"myhepar2data.csv",
-            "type":"categorical",
+            "datatype":"categorical",
             "samples":1000,
-            "filename":"myhepar2data.csv"
+            "filename":"myhepar2data.csv",
+            "graph":"hepar2.csv",
+            "source":"scutari"
             }
-        ],
-        "data_dir":[
-            {"id":"my_bio_data_dir",
-             "directory":"biodata/"}
-            ,
-            {"id":"mydatadir",
-             "directory":"mydata"}
         ]
     },
     "graph_sampling_algorithms": {
@@ -148,34 +88,20 @@ Open the file `simresults/ROC.eps`.
             "av_parents": [2],
             "dims": [80]
         }],
-        "bn.fit_adjmats" :[{
-            "id":"bn.fit_adjmat",
-            "sub_directory": "bn.fit_adjmats/"
-        }],
         "fixed_adjmats": [
             {"id":"asia.csv",
              "filename":"asia.csv",
-             "nodes": 8,
-             "edges": 8,
-             "average_markov_blanket_size": 2.5,
-             "average_degree": 2,
-             "maximum_degree": 2,
-             "origin":"http://bnlearn.com/bnrepository/discrete-large.html#asia"}
+             "source":"http://bnlearn.com/bnrepository/discrete-large.html#asia"}
              ,
              {
                 "id":"myasia.csv",
                 "filename":"myasia.csv",
-                "nodes": 8,
-                "edges": 8,
-                "average_markov_blanket_size": 2.5,
-                "average_degree": 2,
-                "maximum_degree": 2,
-                "origin":"http://bnlearn.com/bnrepository/discrete-large.html#asia"
+                "source":"http://bnlearn.com/bnrepository/discrete-large.html#asia"
             }
             ,  
             {"id": "hepar2.csv",
              "filename": "hepar2.csv",
-             "origin":"http://bnlearn.com/bnrepository/discrete-large.html#hepar2"}]
+             "source":"http://bnlearn.com/bnrepository/discrete-large.html#hepar2"}]
     },
     "parameters_sampling_algorithms": {
         "generateBinaryBN":[{
@@ -186,21 +112,14 @@ Open the file `simresults/ROC.eps`.
         "bn.fit_networks": [
             {"id":"hepar2.rds",
              "filename": "hepar2.rds",
-            "sub_directory":"bn.fit_networks"}
+             "source":"Scutari"          
+            }
         ],
-        "notears":[{
+        "notears_parameters_sampling":[{
             "id":"notears",
             "edge_coefficient_range_from":0.5,
             "edge_coefficient_range_to":2
         }]
-    },
-    "evaluation": {
-        "score": {
-            "bdecatpar": {
-                "chi": 1,
-                "edgepf": 1
-            }
-        }
     },
     "structure_learning_algorithms": {
         "trilearn_loglin": [
@@ -542,28 +461,3 @@ Open the file `simresults/ROC.eps`.
         ]
     }
 }
-```
-
-
-## Contributing
-
-1. Fork it!
-2. Create your feature branch: `git checkout -b my-new-feature`
-3. Commit your changes: `git commit -am 'Add some feature'`
-4. Push to the branch: `git push origin my-new-feature`
-5. Submit a pull request :D
-
-## History
-
-TODO: Write history
-
-## Credits
-
-TODO: Write credits
-
-## License
-
-TODO: Write license
-]]></content>
-  <tabTrigger>readme</tabTrigger>
-</snippet>
